make temp navbar

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,1 +1,10 @@
-@import '../../node_modules/bulma/bulma.sass'
+
+
+// $primary: #123123;
+// $link: ;
+// $info: ;
+// $success: ;
+// $warning: ;
+// $danger: ;
+
+@import '../../node_modules/bulma/bulma.sass';
