--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,8 @@
+@import '../../node_modules/bootstrap/scss/bootstrap.scss';
 
+@import './variables';
 
 @import './base';
 @import './card';
+@import './footer';
 
-@import '../../node_modules/bootstrap/scss/bootstrap.scss';
