make solstagram page

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR|Roboto');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR|Roboto|Cookie');
 
 $site-font: 'Roboto', 'Noto Sans KR', sans-serif;
 
