make about but content is very poor. apply all container have min height 1080

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,9 +1,10 @@
 .site-footer {
 
-  background-color: $white;
+  background-color: $footer-black;
   margin-top: 20px;
   padding: 10px;
   text-align: center;
+  color: $white;
 
   .footer-social-links {
     text-align: center;
