--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR|Roboto|Cookie');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR|Ubuntu|Cookie');
 
-$site-font: 'Roboto', 'Noto Sans KR', sans-serif;
+$site-font: 'Ubuntu', 'Noto Sans KR', sans-serif;
 
 $light-gray: rgb(240, 240, 240);
 $dark-gray: rgb(80, 80, 80);
 $white: white;
+$footer-black: #141313;
