--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -1,3 +1,10 @@
 .markdown-body {
-  
+  .language-text {
+    background: none;
+    color: tomato;
+  }
+
+  code {
+    font-family: $code-font;
+  }
 }
