--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR|Ubuntu|Cookie');
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding|Source+Code+Pro|Noto+Sans+KR|Ubuntu|Cookie');
 
 $site-font: 'Ubuntu', 'Noto Sans KR', sans-serif;
+$code-font: 'Source Code Pro', 'Nanum Gothic Coding';
 
 $light-gray: rgb(240, 240, 240);
 $dark-gray: rgb(80, 80, 80);
