change primary and info color and tuning layout

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,3 +7,11 @@ $light-gray: rgb(240, 240, 240);
 $dark-gray: rgb(80, 80, 80);
 $white: white;
 $footer-black: #141313;
+
+$primary: #29A3A0;
+$info: #964b00;
+
+// color
+// 파스텔톤 청록색 #14C991
+// 모래색 #FCD365
+// 물묻은 모래색 #C99814
