--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -3,10 +3,10 @@
     position: relative;
     background-color: black;
 
-    img {
+    .banner-img {
       
       width: auto;
-      height: 400px;
+      height: 500px;
       size: cover;
       opacity: 0.5;
     }
@@ -17,10 +17,7 @@
       left: 50%;
       font-size: 50px;
       align-content: center;
+      border: 2px solid black;
     }
   }
-
-  
-
-  
 }
