CHANGE: about.js ->  make horizontal scroll timeline

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -4,7 +4,6 @@
     background-color: black;
 
     .banner-img {
-      
       width: auto;
       height: 500px;
       size: cover;
@@ -18,6 +17,97 @@
       font-size: 50px;
       align-content: center;
       border: 2px solid black;
+    }
+  }
+}
+
+.timeline {
+  white-space: nowrap;
+  overflow-x: scroll;
+
+  ol {
+    font-size: 0;
+    width: 100vw;
+    padding: 250px 0;
+    transition: all 1s;
+
+    li {
+      position: relative;
+      display: inline-block;
+      list-style-type: none;
+      width: 160px;
+      height: 3px;
+      background: #000;
+
+      &:last-child {
+        width: 280px;
+      }
+
+      &:not(:first-child) {
+        margin-left: 14px;
+      }
+
+      &:not(:last-child)::after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: calc(100% + 1px);
+        bottom: 0;
+        width: 12px;
+        height: 12px;
+        transform: translateY(-50%);
+        border-radius: 50%;
+        background: $primary;
+      }
+
+      div {
+        position: absolute;
+        left: calc(100% + 7px);
+        width: 280px;
+        padding: 15px;
+        font-size: 1rem;
+        white-space: normal;
+        color: black;
+        background: white;
+
+        &::before {
+          content: '';
+          position: absolute;
+          top: 100%;
+          left: 0;
+          width: 0;
+          height: 0;
+          border-style: solid;
+        }
+      }
+
+      &:nth-child(odd) div {
+        top: -16px;
+        transform: translateY(-100%);
+
+        &::before {
+          top: 100%;
+          border-width: 8px 8px 0 0;
+          border-color: white transparent transparent transparent;
+        }
+      }
+
+      &:nth-child(even) div {
+        top: calc(100% + 16px);
+
+        &::before {
+          top: -8px;
+          border-width: 8px 0 0 8px;
+          border-color: transparent transparent transparent white;
+        }
+      }
+    }
+
+    time {
+      display: block;
+      font-size: 1.2rem;
+      font-weight: bold;
+      margin-bottom: 8px;
     }
   }
 }
