POST: 011-freivalds-algorithm and ADD: katex, gatsby-remark-katex for render math typesetting

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import './variables';
 
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
+@import '../../node_modules/katex/dist/katex.min.css';
 
 @import './base';
 @import './card';
