change style Typography Funston

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,7 +8,7 @@
 @import './footer';
 @import './header';
 @import './main';
-@import './post';
+// @import './post';
 @import './about';
 @import './solstagram';
 
